[Step1] 스트림, 람다, Optional (#2068)
* refactor: 익명 클래스를 람다로 전환

* refactor: 람다를 활용해 중복 제거

* refactor: 다양한 stream method 실습

* refactor: Optional 실습

---------

Co-authored-by: yeeji-kwon <yeji.kwon@myrealtrip.com>